<!--
  ~ Created by Mohamed Bushra on 20/02/17 14:40
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last Modified 19/02/17 12:07.
  -->

<resources>
    <string name="app_name">Tunel</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tunellogo">tunellogo</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reg_form">Registration Form</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="sign_up_for_tun_l">Sign up for Tunél</string>
    <string name="logout">Logout</string>
    <string name="save_information">Save Information</string>
    <string name="welcome_to_tun_l">Welcome to Tunél</string>
    <string name="questions_answers_title">Questions and Answers</string>
    <string name="ask_question">Ask a question</string>


    <string-array name="course">
        <item>Select your course level</item>
        <item>Computer Science</item>
        <item>Computer Science (Artificial Intelligence</item>
        <item>Computer Science (Digital Media and Games)</item>
        <item>Computer Science (Network Computing)</item>
        <item>Computer Science (Software Engineering)</item>

    </string-array>

    <string-array name="course_year">
        <item>Select your year</item>
        <item>Level 0</item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Placement</item>

    </string-array>

    <string-array name="gta_pal">
        <item>PAL Member</item>
        <item>GTA</item>
        <item>PAL</item>
        <item>None</item>
    </string-array>
    <string name="title_activity_ask_question">AskQuestionActivity</string>


</resources>
