<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Mohamed Bushra on 09/12/16 12:03
  ~ Copyright (c) 2016. All rights reserved.
  ~
  ~ Last Modified 09/12/16 12:03.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.brunel.tunel.SignInActivity">


    <EditText
        android:background="#D6DBDF"
        android:layout_width="800dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_marginBottom="45dp"
        android:layout_above="@+id/login"
        android:layout_alignParentStart="true" />

    <EditText
        android:background="#D6DBDF"
        android:layout_width="800dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/etUsername"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/etPassword"
        android:layout_alignParentStart="true" />

    <Button
        android:background="#2471A3"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:id="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@android:color/transparent"
        android:text="@string/sign_up"
        android:textStyle="italic"
        android:textColor="#2471A3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpassword"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="6dp"
        android:layout_above="@+id/login"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        app:srcCompat="@drawable/tunellogo"
        android:id="@+id/tunellogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/tunellogo"/>




</RelativeLayout>
