<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Mohamed Bushra on 17/01/17 12:59
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last Modified 14/01/17 17:22.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_brunel_portal_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.brunel.tunel.activity.BrunelPortalLoginActivity">

    <EditText
        android:background="#D6DBDF"
        android:layout_width="800dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/br_Password"
        android:layout_marginBottom="45dp"
        android:layout_above="@+id/br_login"
        android:layout_alignParentStart="true" />

    <EditText
        android:background="#D6DBDF"
        android:layout_width="800dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/br_Username"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/br_Password"
        android:layout_alignParentStart="true" />

    <Button
        android:background="#2471A3"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:id="@+id/br_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/brunel_logo1"
        android:id="@+id/brunel_logo"
        android:layout_above="@+id/br_Username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp" />


</RelativeLayout>
