<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Mohamed Bushra on 09/02/17 21:13
  ~ Copyright (c) 2017. All rights reserved.
  ~
  ~ Last Modified 09/02/17 21:12.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="uk.ac.brunel.tunel.activity.UserProfileActivity">

    <EditText
            android:background="#F9F9F9"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:inputType="number"
            android:ems="10"
            android:maxLines="7"
            android:id="@+id/student_ID"
            android:hint="  Student ID"
            tools:ignore="HardcodedText"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/fullName"
            android:layout_alignStart="@+id/fullName" />

    <Button
        android:background="#2471A3"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btnLogout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <TextView
        android:textColor="#2471A3"
        android:textStyle="bold|italic"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_to_tun_l"
        android:id="@+id/welcome_msg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textColor="#2471A3"
        android:id="@+id/view_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:background="#F9F9F9"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fullName"
        android:hint="  Full Name"
        android:maxLines="1"
        android:layout_marginTop="22dp"
        tools:ignore="HardcodedText"
        android:layout_below="@+id/view_user_email"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:background="#F9F9F9"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:id="@+id/courseyear_spinner"
        android:layout_below="@+id/course_spinner"
        android:layout_alignStart="@+id/course_spinner"
        android:layout_marginTop="21dp" />

    <Spinner
        android:background="#F9F9F9"
        android:id="@+id/course_spinner"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/student_ID"
        android:layout_alignStart="@+id/student_ID" />

    <Button
        android:background="#2471A3"
        android:textColor="#fff"
        android:textSize="25sp"
        android:text="@string/save_information"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/save_info"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/btnLogout"
        android:layout_alignStart="@+id/gtapal_spinner" />

    <TextView
        android:text="Are you a GTA or PAL?"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/gtapalmes"
        android:layout_below="@+id/courseyear_spinner"
        android:layout_alignStart="@+id/gtapal_spinner" />

    <Spinner
        android:background="#F9F9F9"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:id="@+id/gtapal_spinner"
        android:layout_below="@+id/gtapalmes"
        android:layout_alignStart="@+id/courseyear_spinner"
        android:layout_marginTop="9dp" />


</RelativeLayout>
